add integration of NASA EONET API with three js globe visualization

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,5 +63,15 @@ body {
       }
     }    
   }
+
+  #modal-container {
+    #web-gl-wrapper #web-gl-container {
+      canvas {
+        border-radius: 20px;
+        width: 100% !important;
+        height: 50% !important;
+      }
+    }
+  }
 }
 
