--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,13 @@ body {
 
 @layer components {
   .chat-room {
+    * {
+      overflow-anchor: none;
+    }
+    #anchor {
+      overflow-anchor: auto;
+      height: 1px;
+    }
     /* width */
     &::-webkit-scrollbar {
       width: 6px;
