--- a/app/globals.css
+++ b/app/globals.css
@@ -71,5 +71,25 @@ body {
       height: 50% !important;
     }
   }
+
+  .loading-indicator {
+    display: flex;
+    gap: 0.25rem;
+    span {
+      font-size: 2.5rem;
+      animation: loading 1.4s infinite ease-in-out;
+    }
+    span:nth-child(1) {
+      animation-delay: -0.32s;
+    }
+    span:nth-child(2) {
+      animation-delay: -0.16s;
+    }
+  }
+
+  @keyframes loading {
+    0%, 80%, 100% { opacity: 0; }
+    40% { opacity: 1; }
+  }
 }
 
