--- a/app/globals.css
+++ b/app/globals.css
@@ -76,7 +76,7 @@ body {
     display: flex;
     gap: 0.25rem;
     span {
-      font-size: 2.5rem;
+      /* font-size: 2.5rem; */
       animation: loading 1.4s infinite ease-in-out;
     }
     span:nth-child(1) {
